--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "coffee-react": "^4.0.0",
     "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
+    "fs-extra": "^0.26.3",
     "glob": "^5.0.15",
     "jquery": ">=2.0.0",
     "jsdom": "^7.0.2",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0"
+  },
+  "devDependencies": {
+    "jquery": "^2.1.4"
   }
 }
