WIP: add coffee-coverage

--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.4.1",
     "chai-backbone": "^0.9.2",
+    "coffee-coverage": "^1.0.1",
     "coffee-react": "^4.0.0",
     "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
     "fs-extra": "^0.26.3",
     "glob": "^5.0.15",
+    "istanbul": "^0.4.2",
     "jquery": ">=2.0.0",
     "jsdom": "^7.0.2",
     "mocha": "^2.3.4",
