--- a/package.json
+++ b/package.json
@@ -24,25 +24,25 @@
   },
   "homepage": "https://github.com/littlebee/bumble-test",
   "dependencies": {
-    "babel-core": "^6.1.21",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "chai": "^3.4.1",
-    "chai-backbone": "^0.9.2",
-    "chai-changes": "^1.3.6",
-    "coffee-coverage": "^1.0.1",
-    "coffee-react": "^4.0.0",
-    "coffee-script": "^1.10.0",
-    "commander": "^2.9.0",
-    "fs-extra": "^0.26.3",
-    "glob": "^5.0.15",
-    "istanbul": "^0.4.2",
-    "jquery": "^2.1.4",
-    "jsdom": "^7.0.2",
-    "mocha": "^2.3.4",
-    "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0",
-    "underscore": "^1.8.3"
+    "babel-core": "6.1.21",
+    "babel-preset-es2015": "6.1.18",
+    "babel-preset-react": "6.1.18",
+    "chai": "3.4.1",
+    "chai-backbone": "0.9.2",
+    "chai-changes": "1.3.6",
+    "coffee-coverage": "1.0.1",
+    "coffee-react": "4.0.0",
+    "coffee-script": "1.10.0",
+    "commander": "2.9.0",
+    "fs-extra": "0.26.3",
+    "glob": "5.0.15",
+    "istanbul": "0.4.2",
+    "jquery": "2.1.4",
+    "jsdom": "7.0.2",
+    "mocha": "2.3.4",
+    "sinon": "1.17.2",
+    "sinon-chai": "2.8.0",
+    "underscore": "1.8.3"
   },
   "devDependencies": {}
 }
