--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "chai": "3.4.1",
     "chai-backbone": "0.9.2",
     "chai-changes": "1.3.6",
-    "coffee-coverage": "1.0.1",
+    "coffee-coverage": "git+https://github.com/littlebee/coffee-coverage.git",
     "coffee-react": "4.0.0",
     "coffee-script": "1.10.0",
     "commander": "2.9.0",
