--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
   },
   "homepage": "https://github.com/littlebee/bumble-test",
   "dependencies": {
-    "babel-core": "6.1.21",
-    "babel-preset-es2015": "6.1.18",
-    "babel-preset-react": "6.1.18",
+    "babel-core": "6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-register": "6.26.0",
     "chai": "3.4.1",
     "chai-backbone": "0.9.2",
     "chai-changes": "1.3.6",
     "coffee-coverage": "git+https://github.com/littlebee/coffee-coverage.git#withCompiled",
-    "coffee-react": "4.0.0",
-    "coffee-script": "1.10.0",
+    "coffeescript": "2.2.4",
     "commander": "2.9.0",
     "fs-extra": "0.26.3",
     "glob": "5.0.15",
@@ -43,6 +45,5 @@
     "sinon": "1.17.2",
     "sinon-chai": "2.8.0",
     "underscore": "1.8.3"
-  },
-  "devDependencies": {}
+  }
 }
