--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "chai": "3.4.1",
     "chai-backbone": "0.9.2",
     "chai-changes": "1.3.6",
-    "coffee-coverage": "git+https://github.com/littlebee/coffee-coverage.git#withCompiled",
+    "closest": "0.0.1",
+    "coffee-coverage": "git+https://github.com/littlebee/coffee-coverage.git",
     "coffee-react": "5.0.1",
     "coffee-script": "1.10.0",
     "commander": "2.9.0",
@@ -38,8 +39,10 @@
     "glob": "5.0.15",
     "istanbul": "0.4.2",
     "jquery": "2.1.4",
-    "jsdom": "7.0.2",
-    "mocha": "4.1.0",
+    "jsdom": "11.11.0",
+    "jsdom-global": "3.0.2",
+    "mocha": "5.2.0",
+    "request": "^2.87.0",
     "sinon": "1.17.2",
     "sinon-chai": "2.8.0",
     "underscore": "1.8.3"
